--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -8,3 +8,51 @@ parts:
     - file: langchain/prompt_engineering/overview
       sections:
       - glob: langchain/prompt_engineering/*
+    - file: langchain/chains/overview
+      sections:
+      - glob: langchain/chains/*
+    - file: langchain/rag/overview
+      sections:
+      - glob: langchain/rag/*
+    - file: langchain/agents/overview
+      sections:
+      - glob: langchain/agents/*
+    - file: langchain/tools/overview
+      sections:
+      - glob: langchain/tools/*
+    - file: langchain/memory/overview
+      sections:
+      - glob: langchain/memory/*
+    - file: langchain/lcel/overview
+      sections:
+      - glob: langchain/lcel/*
+    - file: langchain/streaming_callbacks/overview
+      sections:
+      - glob: langchain/streaming_callbacks/*
+    - file: langchain/evaluation/overview
+      sections:
+      - glob: langchain/evaluation/*
+    - file: langchain/data_ingestion/overview
+      sections:
+      - glob: langchain/data_ingestion/*
+    - file: langchain/caching/overview
+      sections:
+      - glob: langchain/caching/*
+    - file: langchain/security/overview
+      sections:
+      - glob: langchain/security/*
+    - file: langchain/deployment/overview
+      sections:
+      - glob: langchain/deployment/*
+    - file: langchain/interoperability/overview
+      sections:
+      - glob: langchain/interoperability/*
+    - file: langchain/production/overview
+      sections:
+      - glob: langchain/production/*
+    - file: langchain/metrics/overview
+      sections:
+      - glob: langchain/metrics/*
+    - file: langchain/advanced/overview
+      sections:
+      - glob: langchain/advanced/*
